--- a/translations/messages.fr.yaml
+++ b/translations/messages.fr.yaml
@@ -15,6 +15,7 @@ note:
   no_notes: "Pas de notes"
   TrierPar: "Trier par"
   BtnTrie: "Trier"
+  default: "Défaut"
 banner:
   noteLink: "Notes"
   matiereLink: "Matières"
